# pd-cyclone

./: .gitattributes  .gitignore  0.2beta1_README.txt  CMakeLists.txt  LICENSE.txt  Makefile  Makefile.common  Makefile.dirs  README.md  README.txt  README_0.3-beta-1.txt  README_new.txt  SConscript  build_counter  changelog.txt  changelog_old.txt  dumpsetups  make-aliases.sh  notes for maintainers.txt  old_changelog.txt  quoteinitializer  remove-aliases.sh
.github/workflows/: c-cpp.yml
ViCious/cyclone/: makefile  objects  snapfiles  sources
ViCious/pddp/: makefile
ViCious/toxy/: makefile  objects  snapfiles
abstractions/: teeth~.pd
binaries_src/: sub_lib_cyclone.c
binaries_src/control/: bucket.c  coll.c  cosh.c  counter.c  decide.c  fromsymbol.c  funnel.c  join.c  maximum.c  midiparse.c  minimum.c  mtr.c  offer.c  seq.c  spray.c  sustain.c  tosymbol.c  uzi.c  zl.c
binaries_src/signal/: allpass.c  atodb.c  bitand.c  bitnot.c  bitor.c  bitsafe.c  bitshift.c  bitxor.c  cartopol.c  click.c  comb.c  count.c  lessthan.c  lookup.c  matrix.c  minmax.c  modulo.c  overdrive.c  peek.c  play.c  plusequals.c  poke.c  poltocar.c  round.c  sah.c  teeth.c  wave.c
classes/MAX/: asinh.c  atanh.c  peak.c
classes/MSP/: line.c  log.c  plusequals.c  rminus.c  scopebak.c  snapshot.c  train.c  train_bak.c
classes/cyclone_lib/: cyclone-old.c  cyclone.c  cyclone2.c  cyclone_lib.c
classes/hammer/: mousestate.c  table.c
classes/sickle/: abs.c  atodb.c  delay.c  notequals.c  pong.c  rdiv.c  sah.c
cyclone/: Makefile  Makefile.libdir  Makefile.objects  Makefile.pdlibbuilder  Makefile.sources  Welcome.html  Welcome.txt  build_counter  cyclone-meta.pd  cyclone-shared.include  cyclone-test.exclude  darwin_altpackage.pmsp  darwin_package.pmsp  notes.txt  pd-cyclone.info
cyclone/hammer/: Append.c  Borax.c  Bucket.c  Clip.c  Decode.c  Histo.c  Makefile.objects  Makefile.sources  MouseState.c  Peak.c  Table.c  TogEdge.c  Trough.c  Uzi.c  acos.c  allhammers.c  anal.c  asin.c  bangbang.c  capture.c  cartopol.c  coll.c  comment.c  cosh.c  counter.c  cycle.c  decide.c  funbuff.c  gate.c  grab.c  hammer.c  maximum.c  minimum.c  mtr.c  offer.c  past.c  poltocar.c  prepend.c  prob.c  pv.c  (+11 more)
cyclone/help/: Append-help.pd  Borax-help.pd  Bucket-help.pd  Clip-help.pd  MouseState-help.pd  Peak-help.pd  Snapshot~-help.pd  TogEdge-help.pd  Trough-help.pd  abs~-help.pd  active-help.pd  anal-help.pd  atanh~-help.pd  atan~-help.pd  average~-help.pd  bangbang-help.pd  bitor~-help.pd  bitshift~-help.pd  bitxor~-help.pd  buddy-help.pd  buffir~-help.pd  change~-help.pd  coll-help.pd  cosx~-help.pd  curve~-help.pd  cycle~-help.pd  delay~-help.pd  deltaclip~-help.pd  flush-help.pd  framedelta~-help.pd  fromsymbol-help.pd  funbuff-help.pd  funnel-help.pd  (+29 more)
cyclone_lib/: cyclone_lib.c
cyclone_new_magic/: acos.c  acosh.c  asin.c  atanh.c  bitand.c  bitnot.c  bitor.c  bitsafe.c  bitshift.c  bitxor.c  cartopol.c  gate.c  minmax.c  plusequals.c  poltocar.c  sah.c  selector.c
cyclone_src/: cyclone-meta.pd
debian/: changelog  control  copyright  links  pd-cyclone.lintian-overrides  rules  watch
documentation/: All_about_cyclone.pd  cyclone-meta.pd
graveyeard/: about.txt
hammer/: Clip.c  Uzi.c  acosh.c  append.c  borax.c  bucket.c  clip.c  dbtoa~.c  decode.c  histo.c  peak.c  pong.c  rdiv.c  round.c  scale.c  togedge.c  trough.c  uzi.c
help/: !--help.pd  !-.pd  !-~.pd  !:-help.pd  !:.pd  !:~-help.pd  !:~.pd  !=~.pd  %~.pd  +=~.pd  --All_Cyclone_Objects.pd  <=~-help.pd  <=~.pd  <~-help.pd  <~.pd  ==~-help.pd  ==~.pd  >=~.pd  >~-help.pd  >~.pd  Append-help.pd  Borax-help.pd  Clip-help.pd  Clip~-help.pd  Line~-help.pd  Peak-help.pd  Scope~-help.pd  Snapshot~-help.pd  Table-help.pd  TogEdge-help.pd  Uzi-help.pd  _All_Cyclone_Objects.pd  abs~-help.pd  accum-help.pd  acosh-help.pd  acosh~-help.pd  acos~-help.pd  all_about_cyclone.pd  allpass~-help.pd  asinh-help.pd  (+146 more)
help_files/: Append-help.pd  Borax-help.pd  Bucket-help.pd  Clip-help.pd  Decode-help.pd  Histo-help.pd  MouseState-help.pd  Peak-help.pd  README.md  Table-help.pd  TogEdge-help.pd  Trough-help.pd  Uzi-help.pd  _All_Cyclone_Objects.pd  abs~-help.pd  accum-help.pd  acos-help.pd  acosh-help.pd  acosh~-help.pd  acos~-help.pd  active-help.pd  all_about_cyclone.pd  allpass~-help.pd  anal-help.pd  append-help.pd  asin-help.pd  asinh-help.pd  asinh~-help.pd  asin~-help.pd  atan2~-help.pd  atanh-help.pd  atanh~-help.pd  atan~-help.pd  atodb-help.pd  atodb~-help.pd  average~-help.pd  avg~-help.pd  bangbang-help.pd  biquad~-help.pd  bitand~-help.pd  (+194 more)
maintenance/: Hilbert~-help.pd  New.baddeps.txt  README_0.3.txt  TEST_all_objects.pd  changelog.txt  cyclone-meta.pd  cyclone-v0.3alpha1-objects.txt  make install objectsdir=.:build.txt  new_objects.txt  tools.txt
md-help/: mtr.md
pddp/: Makefile  build_counter  notes.txt  pddpboot.tcl  pddpclient.tcl  pddplink.c  pddpserver.tcl
riddle/: riddle.c  riddle.h
shadow/: cyclone.c  cyclone_lib.c  nettles.c
shared/: Makefile.dirs  bitwise.c  bitwise.h  build_counter  cybuf.c  cybuf.h  getridof.baddeps  getridof.baddeps.txt  magic.c  magic.h  magicbit.c  magicbit.h  notes.txt  shared.h
shed/: README.txt  makeSourceDist.sh  updateVersionHelpPatch.sed  updateVersionHelpPatches.sh
sickle/: Clip.c  Line.c  Scope.c  abs.c  atodb~.c  biquad.c  bitxor.c  buffir.c  count.c  curve.c  cycle.c  delay.c  deltaclip.c  downsamp.c  equals.c  equals2.c  greaterthan2.c  greaterthaneq.c  lessthan.c  lessthaneq.c  line.c  matrix.c  matrixbak.c  minmax.c  modulo2.c  plusequals2.c  pong.c  pow.c  rand.c  round.c  sampstoms.c  scope.c  snapshot.c  thresh.c  train.c  trapezoid.c  triangle.c
src/: sub_lib_cyclone.c
test/: !name_clash.pd  allHammers.pd  allSickles.pd  coll-test2.pd  xbendin2-help.pd  xbendout2-help.pd
tests/: test_invariant_capture.c
toxy/: Makefile  Makefile.objects  Makefile.sources  build_counter  notes.txt  plustot.c  plustot.env.c  plustot.h  plustot.in.c  plustot.out.c  plustot.print.c  plustot.qlist.c  plustot.var.c  pluswidget.c  tot.c  tow.c  toxy-shared.include  widget.c  widgettype.c  widgettype.h
(+1553 files in other folders)
